# pgqd

./: .gitignore  .gitmodules  LICENSE  Makefile  NEWS.rst  README.rst  config.mak.in  configure.ac
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  copyright  init  install  pgqd.ini  postinst  postrm  service  tmpfile
etc/: pathsep.sed  quote-lines.sed
src/: maint.c  pgqd.c  pgqd.h  pgsocket.c  pgsocket.h  retry.c  ticker.c
tests/: test.sh
